@@ -19,6 +19,8 @@ This problem was also noted in RT#62939. Thanx to Allison Randal for the 2010 re
 This addresses RT#55106. Thanx to COSMICNET for the 2010 patch.
 - Flag RT#59890 as not-an-error, since http://localhost:8020/pods/perlfaq is not (presumably) output by
 the code, and hence is not the jumping-off point for any within-FAQ links.
+- Re-word error messages, and use die rather than a combination of die and Carp.
+- Change licence from Perl to Artistic 2, since the Perl licence is not listed at http://opensource.org/licenses.
 - Switch tests from using Test to Test::More.
 - Add t/version.t.
 - Add xt/author/pod.t.
